# Cell_ACDC

./: .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.rst  KEYBINDS.md  LICENSE  MANIFEST.in  README.md  README.rst  acdc.parquet  acdc.yml  conda_env_list_commands.txt  environment.yml  global_cca_df_with_single_moth_bud_pair.csv  gui_requirements_pyqt6.txt  precompile_functions.py  pyproject.toml  requirements.txt  requirements_gui_pyqt5.txt  requirements_gui_pyqt6.txt  requirements_test.txt  setup.cfg  setup.py  size and G1 length data.csv  test.csv  yeast-env-mac.yml  yeast_env.yml
.acdc-settings/: last_entries_metadata.csv  recentPaths.csv  settings.csv  shortcuts.ini
.features/3drenderer/: README.md  batch-1-done.md  batch-2-lut-overlays.md  batch-3-cell-id.md  batch-4-z-anisotropy.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  enhanchement_request.yml  feature_request.md  feature_request.yml  informal-request.md  informal-request.yml
.github/workflows/: auto-approve-small-pr.yml  build-macos.yml  build-macos_pyqt5.yml  build-macos_pyqt6.yml  build-ubuntu.yml  build-ubuntu_pyqt5.yml  build-ubuntu_pyqt6.yml  build-windows.yml  build-windows_pyqt5.yml  build-windows_pyqt6.yml  build_cython_extensions.yml  inactive-issues.yml  python-package.yml  python-publish.yml  test_gui_automation.yml
FijiMacros/: CloseAllWindows.ijm  frames_to_tifs.ijm  multiple_files.ijm  single_file.ijm  snapshots_to_tifs.ijm
UserManual/: Cell-ACDC_User_Manual.docx  ~$ll-ACDC_User_Manual.docx  ~WRL0004.tmp  ~WRL1237.tmp  ~WRL2448.tmp
benchmarks/: tracking_FP.py
cellacdc/: QtScoped.py  SingleCellSeg.py  __init__.py  __main__.py  _base_widgets.py  _core.py  _debug.py  _event_loop.py  _get_app_palette.py  _main.py  _palettes.py  _process.py  _q_debug.py  _run.py  _test_all_icons.py  _types.py  _version.py  _view_all_buttons.py  _view_all_icons.py  _warnings.py  acdc_regex.py  annotate.py  apps.py  autopilot.py  cca_functions.py  cli.py  code_structure.md  colors.py  config.py  core.py  data.py  dataPrep.py  dataReStruct.py  dataStruct.py  data_cli.py  data_handler.py  data_source.py  debugutils.py  exporters.py  features.py  (+55 more)
cellacdc/_deprecated/: filters.py
cellacdc/_html/: gui_welcome.html
cellacdc/acdc_bioio_bioformats/: __init__.py  _init_reader.py  _read_metadata.py  _read_sample_data.py  _save_data.py  _save_data_single_channel.py  _utils.py  install.py  reader.py
cellacdc/bioformats/: __init__.py  formatreader.py  formatwriter.py  log4j.py  metadatatools.py  noseplugin.py  omexml.py
cellacdc/components/: __init__.py  base.py  buttons.py  inputs_basic.py  layout.py  lists.py  palette.py  path_controls.py  progress.py
cellacdc/dialogs/: __init__.py  _base.py  export.py  general.py  measurements.py  metadata.py  models.py  preprocess.py  tracking.py
cellacdc/docs/: Makefile  requirements.txt
cellacdc/domain/: __init__.py  cell_cycle.py  cell_cycle_auto.py  cell_cycle_deletions.py  cell_cycle_divisions.py  cell_cycle_frames.py  cell_cycle_history.py  curvature.py  custom_annotations.py  display_images.py  edit_id.py  events.py  frame_metadata.py  labels.py  lineage.py  metrics_basic.py  object_counts.py  object_search.py  points.py  session.py  state.py  tracking.py  types.py  visited_frames.py
cellacdc/fiji_macros/: __init__.py  multiple_files.ijm  multiple_files_separate_channels.ijm  single_file.ijm
cellacdc/help/: about.py  welcome.py
cellacdc/javabridge/: __init__.py  _version.py  jutil.py  locate.py  noseplugin.py  wrappers.py
cellacdc/metrics/: CV.py  channel_indipendent_metric_example.py  combine_metrics_example.py
cellacdc/mixins/: __init__.py  _apply_parents.py  _graph.py  actions.py  annotation_display.py  app_shell.py  brush_tools.py  canvas_context_menu.py  canvas_drawing.py  canvas_events.py  canvas_hover.py  canvas_right_image.py  canvas_selection.py  canvas_tool.py  cca_edits.py  cca_workflows.py  cell_cycle.py  combine.py  curvature_tools.py  custom_annotations.py  data_loading.py  deleted_rois.py  display_decorations.py  draw_clear_region.py  edit_id.py  exporting.py  formatting.py  frame_navigation.py  geometry.py  graphics.py  image_controls.py  image_display.py  label_editing.py  label_edits.py  label_roi.py  label_transform_tools.py  layout_controls.py  lineage_interactions.py  magic_prompts.py  main_menu.py  (+24 more)
cellacdc/mixins_bak/: __init__.py  (+27 more)
docs/: requirements.txt
examples/: run_headless_workflow.py
fiji_scripts/: CZI_frames_to_TIFFs_FP_pos.ijm  CZI_snapshots_to_TIFFs_FP_pos.ijm  ND2_frames_to_TIFFs_FP_pos.ijm  ND2_frames_to_TIFFs_FP_single_pos.ijm  ND2_separatePos_to_TIFFs_FP.ijm
instructions/: Yeast_ACDC_Installation.docx  ~$ast_ACDC_Installation.docx  ~WRL0003.tmp
notebooks/: Untitled.ipynb  acdc_paper_plots.ipynb  cell_cycle_analysis.ipynb  workshop_analyses.ipynb
publications/: references_using_cellacdc.bib
scripts/: fix_split_imports.py  rename_utils_tools.py  split_god_files.py  split_widgets_subpackages.py
src/: CellCycleAnalysis_v2.py  FUNCTIONS.py  MyWidgets.py  YeaSTaC_FUNCTIONS.py  YeaSTaC_GUI_CellCycleAnalysis.py  YeaSTaC_GUI_FinalCheck.py  YeaSTaC_GUI_frames.py  YeaSTaC_GUI_snapshots.py  YeaSTaC_GUI_splitROI.py  YeaSTaC_MyWidgets.py  YeaSTaC_YeaZ.py  Yeast_ACDC_FUNCTIONS.py  Yeast_ACDC_GUI_CellCycleAnalysis.py  Yeast_ACDC_GUI_FinalCheck.py  Yeast_ACDC_GUI_frames.py  Yeast_ACDC_GUI_snapshots.py  Yeast_ACDC_YeaZ.py  acdc_YeaZ.py  apps.py  cca_functions.py  cell_segm_GUI_Positions_v12.py  cell_segm_GUI_frames_v12.py  cell_segm_YeaZ_v1.py  core.py  createDataStruct.py  cropROI.py  dataPrep.py  dataStruct.py  data_handler.py  gui.py  gui_CellCycleAnalysis.py  gui_FinalCheck.py  gui_cca.py  gui_frames.py  gui_segm.py  gui_snapshots.py  gui_splitROI.py  lib.py  load.py  main.py  (+8 more)
tests/: test_cellacdc_tracker_specific_ids.py  test_components_imports.py  test_data_cli.py  test_data_source.py  test_import_cellacdc.py  test_precompiled_functions.py  test_regionprops_cutout_update.py  test_renderer3d.py  test_segm_utils.py  test_split_packages.py  test_viewer_api.py  test_workflow_graph.py
(+637 files in other folders)
