[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "cellacdc"
description = "Cell segmentation, tracking and event annotation"
keywords = [
    "live-cell imaging",
    "cell segmentation",
    "cell tracking",
    "cell cycle annotations",
    "image analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "numpy<2.0",
    "pandas",
    "opencv-python-headless",
    "natsort",
    "h5py",
    "scikit-image>=0.18",
    "tqdm",
    "scikit-learn",
    "psutil",
    "boto3",
    "requests",
    "setuptools-scm",
]
dynamic = [
    "version",
]

[[project.authors]]
name = "Francesco Padovani and Benedikt Mairhoermann"
email = "francesco.padovani@helmholtz-muenchen.de"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
"GitHub page" = "https://github.com/SchmollerLab/Cell_ACDC"
"Author contact" = "https://schmollerlab.com/francescopadovani"
"Schmoller lab" = "https://schmollerlab.com/"

[project.optional-dependencies]
gui = [
    "qtpy",
    "pyqtgraph>=0.13.7",
    "seaborn",
    "PyQt6",
]
pyqt6 = [
    "PyQt6",
]
pyqt5 = [
    "PyQt5",
]
pyside2 = [
    "PySide2",
]
pyside6 = [
    "PySide6",
]
torch = [
  "torchvision"
]
tf = [
  "tensorflow"
]
tensorflow = [
  "tensorflow"
]
pytorch = [
    "torchvision",
]
all = [
    "PyQt6",
    "torchvision",
    "tensorflow",
    "tables",
]

[project.scripts]
cellacdc = "cellacdc.__main__:run"
acdc = "cellacdc.__main__:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "cellacdc/docs/source/images",
]
namespaces = false

[tool.setuptools_scm]
version_file = "cellacdc/_version.py"

# Ignore DeprecationWarnings
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
