[metadata]
name = cellacdc
author = Francesco Padovani and Benedikt Mairhoermann
author_email = francesco.padovani@helmholtz-muenchen.de
description = Cell segmentation, tracking and event annotation
keywords =
    live-cell imaging
    cell segmentation
    cell tracking
    cell cycle annotations
    image analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SchmollerLab/Cell_ACDC
project_urls =
    Author contact = https://www.helmholtz-munich.de/ife/about-us/people/staff-detail/ma/8873/Dr.-Padovani/index.html
    Schmoller lab = https://www.helmholtz-munich.de/ife/research/kurt-schmoller-cell-and-organelle-size-control/research/index.html
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.7
include_package_data = True

[options.extras_require]
all =
    pyqtgraph==0.12.3
    PyQt5==5.15.4
    numpy==1.20.0
    pandas==1.2.4
    tables==3.6.1
    opencv-python-headless==4.5.2.54
    matplotlib==3.1.2
    tqdm==4.59.0
    natsort==7.1.1
    scipy>=1.6.2
    scikit-image==0.18.1
    pyglet==1.5.16
    seaborn==0.11.1
    numba==0.53.1
    requests==2.25.1
    tensorflow>=2.3.0,<2.6.0
    torch==1.9.0
    munkres==1.1.4
    scikit-learn==0.24.2
    boto3==1.18.20
    jupyterlab==3.0.18
    fvcore==0.1.5.post202109e24
    cloudpickle==2.0.0
    omegaconf==2.1.1
    torchvision==0.10.0
    edt~=2.1.2
    ncolor~=1.1.2
    stardist==0.7.3

[options.entry_points]
console_scripts =
    cellacdc = cellacdc.__main__:main
    acdc = cellacdc.__main__:main
