[metadata]
name = cellacdc
author = Francesco Padovani and Benedikt Mairhoermann
author_email = francesco.padovani@helmholtz-muenchen.de
description = Cell segmentation, tracking and event annotation
keywords =
    live-cell imaging
    cell segmentation
    cell tracking
    cell cycle annotations
    image analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SchmollerLab/Cell_ACDC
project_urls =
    Author contact = https://www.helmholtz-munich.de/ife/about-us/people/staff-detail/ma/8873/Dr.-Padovani/index.html
    Schmoller lab = https://www.helmholtz-munich.de/ife/research/kurt-schmoller-cell-and-organelle-size-control/research/index.html
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.7
include_package_data = True
install_requires =
    fastremap

[options.extras_require]
all =
    tensorflow<2.5
    torch>=1.6
    scipy
    opencv-python-headless
    pandas
    torchvision
    numba
    natsort
    PyQt5
    pyqtgraph
    scikit-image==0.18.1 # we use 0.18 to be sure of the name of regionprops
    tqdm
    seaborn
    scikit-learn
    psutil
    boto3
    fastremap
    requests
stardist =
    stardist
btrack =
    btrack
    napari
napari =
    napari

[options.entry_points]
console_scripts =
    cellacdc = cellacdc.__main__:main
    acdc = cellacdc.__main__:main
