[metadata]
name = cellacdc
author = Francesco Padovani and Benedikt Mairhoermann
author_email = francesco.padovani@helmholtz-muenchen.de
description = Cell segmentation, tracking and event annotation
keywords =
    live-cell imaging
    cell segmentation
    cell tracking
    cell cycle annotations
    image analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SchmollerLab/Cell_ACDC
project_urls =
    Author contact = https://schmollerlab.com/francescopadovani
    Schmoller lab = https://schmollerlab.com/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.8
include_package_data = True
install_requires =
    numpy
    opencv-python-headless
    natsort
    h5py
    PyQt5>5.15
    pyqtgraph>=0.12.4
    scikit-image>=0.18
    tqdm
    matplotlib>=3.5
    seaborn
    scikit-learn
    psutil
    boto3
    requests
    setuptools-scm

[options.extras_require]
pyqt6 =
    PyQt6

pyqt5 =
    PyQt5

pyside2 = 
    PySide2

pyside6 = 
    PySide6

torch = 
    torchvision

tf = 
    tensorflow

tensorflow = # alias for tf
    %(tf)s

pytorch = # alias for torch
    %(torch)s

all =
    %(pyqt6)s
    %(torch)s
    %(tf)s

[options.entry_points]
console_scripts =
    cellacdc = cellacdc.__main__:run
    acdc = cellacdc.__main__:run
